force-app/main/default/objects/Project__c/fields/QuotedCosts__c.field-meta.xml
<CustomField>
    <fullName>QuotedCosts__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c -  Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>