force-app/main/default/objects/Project__c/fields/Receipt_of_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_of_Order_Date__c</fullName>
    <label>Receipt of Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>