force-app/main/default/objects/Project__c/fields/RemoveFromBacklog__c.field-meta.xml
<CustomField>
    <fullName>RemoveFromBacklog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked data will not be consider for Backlog calculation</description>
    <label>Remove From Backlog</label>
    <type>Checkbox</type>
</CustomField>