force-app/main/default/objects/Project__c/fields/RemoveFromSalesResult__c.field-meta.xml
<CustomField>
    <fullName>RemoveFromSalesResult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked data will be not consider for salesResult calculation</description>
    <label>Remove From SalesResult</label>
    <type>Checkbox</type>
</CustomField>