force-app/main/default/objects/Project__c/fields/Return_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Accounting__c</fullName>
    <description>New Customer - has customer provide completed credit applications and resale certificate if applicable and return to accounting?</description>
    <label>Return to Accounting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>