force-app/main/default/objects/Project__c/fields/Review_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Credit_Status__c</fullName>
    <description>Existing Customer - has accounting review credit status?</description>
    <label>Review Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>