force-app/main/default/objects/Project__c/fields/Review_Statement_of_Compliance_from_SE_2__c.field-meta.xml
<CustomField>
    <fullName>Review_Statement_of_Compliance_from_SE_2__c</fullName>
    <description>Review Statement of Compliance from SE 2/Comments?</description>
    <label>Review Statement of Compliance from SE 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>