force-app/main/default/objects/Project__c/fields/Schedule_To__c.field-meta.xml
<CustomField>
    <fullName>Schedule_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>