force-app/main/default/objects/Project__c/fields/Show_Commission_Table__c.field-meta.xml
<CustomField>
    <fullName>Show_Commission_Table__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt; DATEVALUE(&quot;2024-03-21&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Commission Table</label>
    <type>Checkbox</type>
</CustomField>