force-app/main/default/objects/Project__c/fields/Special_pricing_approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_pricing_approval_Notes__c</fullName>
    <description>Special pricing approval documentation needed?</description>
    <label>Special pricing approval Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>