force-app/main/default/objects/Project__c/fields/Special_Shipping_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Shipping_Requirements__c</fullName>
    <description>Special Shipping Requirements?</description>
    <label>Special Shipping Requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>