force-app/main/default/objects/Project__c/fields/Special_Warranty_Requirements_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Warranty_Requirements_Notes__c</fullName>
    <description>Special Warranty Requirements?</description>
    <label>Special Warranty Requirements Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>