force-app/main/default/objects/Project__c/fields/Submittal_Approval_Received_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submittal_Approval_Received_Notes__c</fullName>
    <description>Submittal Approval Received?</description>
    <label>Submittal Approval Received Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>