force-app/main/default/objects/Project__c/fields/Tax_status__c.field-meta.xml
<CustomField>
    <fullName>Tax_status__c</fullName>
    <description>Tax status?</description>
    <label>Tax status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>