force-app/main/default/objects/Project__c/fields/Thank_you_Letter_Sent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_Letter_Sent_Notes__c</fullName>
    <description>Thank you Letter Sent to Customer?</description>
    <label>Thank you Letter Sent Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>