force-app/main/default/objects/Project__c/fields/Total_Cost_Posting__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Posting__c</fullName>
    <label>Total  Cost Posting</label>
    <summarizedField>Cost_Posting__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Cost_Posting__c.Type__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Posting__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>