force-app/main/default/objects/Project__c/fields/Total_Labour_JE_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Labour_JE_Credit__c</fullName>
    <label>Total Labour JE Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>