force-app/main/default/objects/Project__c/fields/Total_Other_JE_Debit__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_JE_Debit__c</fullName>
    <label>Total Other JE Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>