force-app/main/default/objects/Project__c/fields/TotalBuyResellPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyResellPrice__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Resell Price AND Pass Through</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>