force-app/main/default/objects/Project__c/fields/TotalDirectSellPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalDirectSellPrice__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Direct_Sell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Sell Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>