force-app/main/default/objects/Project__c/fields/TotalLaborCost__c.field-meta.xml
<CustomField>
    <fullName>TotalLaborCost__c</fullName>
    <label>Total Labor Cost</label>
    <summarizedField>Cost_Posting__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Cost_Posting__c.Type__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Posting__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>