force-app/main/default/objects/Project__c/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <formula>Opportunity__r.Active_Financial_Quote__r.Total_Direct_Sell_Price__c + Opportunity__r.Active_Financial_Quote__r.Total_Buy_Resell_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>