force-app/main/default/objects/Project__c/listViews/Kelly_s_Projects.listView-meta.xml
<ListView>
    <fullName>Kelly_s_Projects</fullName>
    <columns>OpportunityNumber__c</columns>
    <columns>NAME</columns>
    <columns>Project_Stage__c</columns>
    <columns>Pay_Cycle__c</columns>
    <columns>ProjectShipDate__c</columns>
    <columns>Notes_Details__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Record_Type__c</field>
        <operation>equals</operation>
        <value>Equipment - Design/Build,Equipment - Plan/Spec,General Contracting</value>
    </filters>
    <filters>
        <field>Project_Stage__c</field>
        <operation>notEqual</operation>
        <value>All paid,Archived</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>KAL</value>
    </filters>
    <label>Kelly&apos;s Projects</label>
</ListView>