force-app/main/default/objects/Project__c/listViews/MMOKProjects.listView-meta.xml
<ListView>
    <fullName>MMOKProjects</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>PO_Number__c</columns>
    <columns>Project_Stage__c</columns>
    <columns>ProjectShipDate__c</columns>
    <columns>Active_Financial_Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Number__c</columns>
    <columns>Return_to_Accounting__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>mlv,ann,KAL</value>
    </filters>
    <filters>
        <field>Project_Stage__c</field>
        <operation>notEqual</operation>
        <value>All paid,Archived</value>
    </filters>
    <filters>
        <field>Opportunity_Record_Type__c</field>
        <operation>notEqual</operation>
        <value>parts</value>
    </filters>
    <label>MMOK Projects</label>
    <sharedTo>
        <territory>Midwest_Group.Oklahoma</territory>
    </sharedTo>
</ListView>