force-app/main/default/objects/Project__c/listViews/Samantha_s_Open_Projects.listView-meta.xml
<ListView>
    <fullName>Samantha_s_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>ProjectShipDate__c</columns>
    <columns>OpportunityNumber__c</columns>
    <columns>Project_Stage__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>ProjectManager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProjectManager__c</field>
        <operation>contains</operation>
        <value>Samantha,anastazia,gabby</value>
    </filters>
    <filters>
        <field>Project_Stage__c</field>
        <operation>notEqual</operation>
        <value>Archived</value>
    </filters>
    <label>EP -  Open Projects</label>
    <sharedTo>
        <group>Engineered_Products</group>
    </sharedTo>
</ListView>